inf-k8s/9service/9-5ingress/yaml/http-go-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-go
  name: http-go
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: http-go

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-go
  name: http-go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-go
  strategy: {}
  template:
    metadata:
      labels:
        app: http-go
    spec:
      containers:
        - image: gasbugs/http-go:ingress
          name: http-go
