inf-k8s/9service/9-5ingress/yaml/http-go-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /welcome/test
    # 80 포트 443 리다이렉트
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  # TLS 설정
  tls:
    - hosts:
        - zeroest.me
      secretName: ingress-tls
  rules:
    - host: zeroest.me
      http:
        paths:
          - pathType: Exact
            path: /welcome/test
            backend:
              service:
                name: http-go
                port:
                  number: 80
